alignment issues

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -42,3 +42,10 @@
     width: 40%;
     z-index: -4;
 }
+
+.react-multiple-carousel__arrow--left {
+    left: 0;
+}
+.react-multiple-carousel__arrow--right {
+    right: 0;
+}
